feat(lumos): material G-buffer for entities via MRT capture
Add a real per-pixel material G-buffer so entities carry their captured
albedo/normal and material-class id, retiring the depth-matching heuristic
that could not tell a glass pane from an entity.

- GBufferTargets: raw-GL MRT FBO borrowing the main color+depth, adding a
  RGBA16F albedo+packed-normal attachment and a RGBA8 material-id attachment.
- Capture entity draws by arming on the entity vertex format at setPipeline
  and binding the G-buffer FBO at trySetup RETURN -- the same seam Iris uses,
  so it coexists with Iris' batched entity rendering.
- Patch vanilla core/entity and core/particle shaders to emit the extra MRT
  outputs, via ShaderManager$CompilationCache.getShaderSource.
- composite.fsh consumes captured entity albedo directly, and suppresses a
  captured entity where a glass pane owns the pixel (glass writes depth).

Also: raise the testmod shadow budget, add a manual spot-light keybind.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>